# File-Embedding

./: Cargo.toml  README.md
src/: db.rs  lib.rs  main.rs  read_path.rs
src/server/: api.rs  error.rs  mod.rs
src/view_file/: acces_db.rs  mod.rs
src/view_file/server/: handler_acces.rs  mod.rs
