[package]
name = "file"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

axum = "0.6.20"


serde = "1.0.188"
serde_json = "1.0.107"


sqlx = { version = "0.7.2", features = ["sqlite", "runtime-tokio-native-tls"] }


tokio = { version = "1", features = ["full"] }


walkdir = "2.4.0"


